DoctorAdviceServiceImpl update & CustomLogger